<resources>
    <string name="app_name">FilePicker</string>

    <string name="select_file">Select File</string>
    <string name="select_files">Select Files</string>
    <string name="new_file">New File</string>
    <string name="select_folder">Select Folder</string>
    <string name="select_folders">Select Folders</string>
    <string name="new_folder">New Folder</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="change_view">Change View</string>
    <string name="view_settings">View Settings</string>
    <string name="grid">Grid</string>
    <string name="list">List</string>
    <string name="layout">Layout</string>
    <string name="options">Options</string>
    <string name="show_hidden_files">Show hidden files</string>
    <string name="show_file_ext">Show file extension</string>
    <string name="file_details">Size : %1$s Last modified : %2$s</string>
    <string name="dir_details">Size : %1$s</string>
    <string name="details">Details</string>
    <string name="selected_items">Selected %1$d %2$s</string>
    <string name="folder_instructions">Long-press to select</string>

    <string name="file">file</string>
    <plurals name="file">
        <item quantity="zero">file</item>
        <item quantity="one">file</item>
        <item quantity="many">files</item>
        <item quantity="other">files</item>
    </plurals>
    <string name="folder">folder</string>
    <plurals name="folder">
        <item quantity="zero">folder</item>
        <item quantity="one">folder</item>
        <item quantity="many">folders</item>
        <item quantity="other">folders</item>
    </plurals>
    <string name="done">Done</string>
    <string name="hint_new_file">Enter new file name...</string>
    <string name="hint_new_folder">Enter new folder name...</string>

    <array name="sort_items">
        <item>By name ascending</item>
        <item>By name descending</item>
        <item>By size ascending</item>
        <item>By size descending</item>
        <item>By date modified ascending</item>
        <item>By date modified descending</item>
    </array>

</resources>
