<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="8dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:id="@+id/llsubhead"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:paddingLeft="16dp"
            android:layout_weight="1"
            android:text="@string/view_settings"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:padding="16dp"
        android:text="@string/layout"/>

    <RadioGroup
        android:id="@+id/layout_settings"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp">

        <RadioButton
            android:padding="8dp"
            android:id="@+id/radio_grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grid"/>

        <RadioButton
            android:padding="8dp"
            android:id="@+id/radio_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list" />

        <RadioButton
            android:padding="8dp"
            android:id="@+id/radio_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details" />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:padding="16dp"
        android:textStyle="bold"
        android:text="@string/options"/>

    <CheckBox
        android:id="@+id/chk_hidden_files"
        android:padding="8dp"
        android:layout_marginLeft="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_hidden_files"/>

    <CheckBox
        android:id="@+id/chk_file_ext"
        android:padding="8dp"
        android:layout_marginLeft="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_file_ext"/>
</LinearLayout>