<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search_white_24dp"
        android:description="@string/search"
        android:showAsAction="always|collapseActionView"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:actionViewClass="android.support.v7.widget.SearchView"
        android:actionLayout="@layout/search_bar"
        app:actionLayout="@layout/search_bar"/>

    <item
        android:id="@+id/action_sort"
        android:title="@string/sort"
        android:icon="@drawable/ic_filter_list_white_24dp"
        android:description="@string/sort"
        android:showAsAction="never"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_view"
        android:title="@string/change_view"
        android:icon="@drawable/ic_remove_red_eye_white_24dp"
        android:description="@string/change_view"
        android:showAsAction="never"
        app:showAsAction="never"/>

</menu>